Cambios y mejoras de conexion y consultas

--- a/admin/css/estilos_login.css
+++ b/admin/css/estilos_login.css
@@ -13,7 +13,7 @@
 
 
 .rowLogin{
-	background-color: white;
+	background-color: rgb(26, 25, 25);
 	border-radius: 15px;
 	box-shadow: 1px 3px 4px rgba(0, 0, 0, .6);
 }
