--- a/css/estilos_login.css
+++ b/css/estilos_login.css
@@ -1,5 +1,5 @@
 #contenedor{
-	background: deepskyblue; 
+	background: rgb(176, 214, 214); 
 }
 
 .rowboxLogin{
@@ -13,7 +13,7 @@
 
 
 .rowLogin{
-	background-color: white;
+	background-color: rgb(222, 231, 243);
 	border-radius: 15px;
 	box-shadow: 1px 3px 4px rgba(0, 0, 0, .6);
 }
