--- a/admin/css/estilos_login.css
+++ b/admin/css/estilos_login.css
@@ -1,5 +1,5 @@
 #contenedor{
-	background: deepskyblue; 
+	background: rgb(137, 160, 133); 
 }
 
 .rowboxLogin{
@@ -13,7 +13,7 @@
 
 
 .rowLogin{
-	background-color: rgb(26, 25, 25);
+	background-color: rgb(144, 186, 213);
 	border-radius: 15px;
 	box-shadow: 1px 3px 4px rgba(0, 0, 0, .6);
 }
